# ChessBot

./: .clang-tidy  CMakeLists.txt  Makefile  README.md
resources/: settings.ini
src/: main.cpp
src/AI/: AI.cpp  AI.h  PieceSqTable.h
src/Chess/: AttackTables.h  ChessBoard.cpp  ChessBoard.h
src/Thread/: ThreadPool.cpp
src/UI/: ConsoleDisplay.h  GDisplay.cpp  GDisplay.h  IDisplay.h
src/Utils/: bits.h
supp/: tsan.supp
